Fix shapeshift cache and font size

--- a/src/pages/integrations/shapeshift/shapeshift-confirm/shapeshift-confirm.scss
+++ b/src/pages/integrations/shapeshift/shapeshift-confirm/shapeshift-confirm.scss
@@ -41,4 +41,9 @@ page-shapeshift-confirm {
   .text-confirm {
     margin-left: 2rem;
   }
+  .item-description {
+    .label {
+      font-size: 12.5px;
+    }
+  }
 }
